i added new main tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,21 @@
     <link rel="stylesheet" href="./main.css">
     <title>Online Store</title>
 </head>
+
 <body>
     <header>
         <h1>Welcome to our website</h1>
     </header>
+
+    <main>
+        <div class="container">
+            <h2>Our products</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quasi ipsam tenetur dolorum blanditiis,
+                ullam modi fugiat ducimus nemo beatae deleniti eaque officiis et explicabo nisi incidunt accusantium
+                sint. Facere.
+            </p>
+        </div>
+    </main>
 </body>
+
 </html>
