added footer and index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             </p>
         </div>
     </main>
+    
+    <footer>
+        <p> &copy; Copyright Reseryed 2022</p>
+    </footer>
 </body>
 
 </html>
