--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 <body>
     <header>
         <h1>Welcome to our website</h1>
+
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -23,7 +31,7 @@
             </p>
         </div>
     </main>
-    
+
     <footer>
         <p> &copy; Copyright Reseryed 2022</p>
     </footer>
